k8s/test/auto_abuse_id.deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "auto-abuse-id"
  namespace: "abuse-api-test"
  labels:
    app: "auto-abuse-id"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: "auto-abuse-id"
  template:
    metadata:
      labels:
        app: "auto-abuse-id"
    spec:
      imagePullSecrets:
        -
          name: "dcu-artifactory-creds"
      containers:
        -
          name: "auto-abuse-id"
          imagePullPolicy: "Always"
          image: "docker-dcu-local.artifactory.secureserver.net/auto_abuse_id:test"
          livenessProbe:
            httpGet:
              path: /classify/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          env:
          - name: BUILD_DATE
            value: 'THIS_STRING_IS_REPLACED_DURING_BUILD'
          - name: sysenv
            value: test
          - name: REDIS
            value: auto-abuse-id-cache.abuse-api-test.svc.cluster.local
          - name: MULTIPLE_BROKERS
            valueFrom:
              secretKeyRef:
                name: amqp-shared-creds
                key: multiple_brokers_grandma
          - name: DB_PASS
            valueFrom:
              secretKeyRef:
                name: db-phishstory-v2
                key: password
          - name: ELASTIC_APM_SERVER_URL
            valueFrom:
              secretKeyRef:
                name: apm-access
                key: url
          - name: ELASTIC_APM_SECRET_TOKEN
            valueFrom:
              secretKeyRef:
                name: apm-access
                key: secret
