k8s/test/auto_abuse_id.ingress.yaml
---
apiVersion: "networking.k8s.io/v1beta1"
kind: "Ingress"
metadata:
  name: "auto-abuse-id"
  namespace: "abuse-api-test"
spec:
  tls:
    - hosts:
      - "classify.int.test-godaddy.com"
      secretName: tls-auto-abuse-id
  rules:
  - host: "classify.int.test-godaddy.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: "auto-abuse-id"
          servicePort: 5000
